--- a/index.html
+++ b/index.html
@@ -3,19 +3,206 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Backpack for men</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.js">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
-    <header>
-
-
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <div class="container-fluid">
+              <a class="navbar-brand " href="#">
+                  <img src="images/Logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse d-flex justify-content-end fw-bolder" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Product</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
     </header>
 
     <main>
+        <section class="sec1 container d-flex mt-5">
+            <div class="justify-content-md-center mt-5 "style="margin-right:200px">
+                <h1 class="display-2 text-property"style="color:#363958">BACKPACK</h1>
+                <h1 class="display-2 text-property"style="color:#76c27e">MOON</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem voluptatem sunt, consequatur architecto quam eius!
+                </p>
+                <button type="button" class="btn btn-primary btn-property"><i class="fas fa-shopping-cart p-2"></i>BUY NOW</button>
+            </div>
+            <div id="profile-image">
+                <img src="images/image21.png" alt="">
 
+            </div>
+        </section>
+        <section class="sec2 container mt-5 d-flex">
+          <div>
+            <div class="card mb-3 shadow" style="max-width: 475px; border-radius: 10px; border: 0em;">
+              <div class="row g-0">
+                <div class="col-md-4 thumb-image">
+                  <img src="images/image 12.png" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body" style="margin-left:-20px;">
+                    <h5 class="card-title">Find the Perfect Fit</h5>
+                    <p class="card-text">Everybody is different, which is why we offer styles for every body..</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card mb-3 shadow" style="max-width: 475px; border-radius: 10px; border: 0em;">
+              <div class="row g-0">
+                <div class="col-md-4 thumb-image">
+                  <img src="images/image 13.png" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body" style="margin-left:-20px;">
+                    <h5 class="card-title">Free Exchanges</h5>
+                    <p class="card-text">One of the many reasons you can shop with peace of mind.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card mb-3 shadow" style="max-width: 475px; border-radius: 10px; border: 0em;">
+              <div class="row g-0">
+                <div class="col-md-4 thumb-image">
+                  <img src="images/image 14.png" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body" style="margin-left:-20px;">
+                    <h5 class="card-title">Contact Our Seller</h5>
+                    <p class="card-text">They are here to help you. That's quite literally what we pay them for.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="shop-image">
+            <img src="images/XMLID 1.png" alt="">
+          </div>
+        </section>
+        <section class=" container mt-5">
+            <h2 >CASUAL BACKPACK</h2>
+            <br>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+             <div class="col">
+                <div class="card h-100 card-image shadow rounded-3">
+                    <img src="Photos/img.png" class="p-5 card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Nike Sportswear Hayward </h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
+                    <div class="p-3 d-flex flex-row">
+                      <h2 class="fw-bold mt-2 price">$234</h2>
+                      <button type="button" class="btn btn-primary btn-property bag-btn"><i class="fas fa-shopping-cart p-2"></i>BUY NOW</button>
+                    </div>        
+                </div>
+                </div>
+                <div class="col">
+                <div class="card h-100 card-image shadow rounded-3">
+                    <img src="Photos/img1.png" class="p-5 card-img-top " alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">School backpack</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
+                    <div class="p-3 d-flex flex-row">
+                      <h2 class="fw-bold mt-2 price">$234</h2>
+                      <button type="button" class="btn btn-primary btn-property bag-btn"><i class="fas fa-shopping-cart p-2"></i>BUY NOW</button>
+                    </div>    
+                </div>
+                </div>
+                <div class="col">
+                <div class="card h-100 card-image shadow rounded-3">
+                    <img src="Photos/image 16.png" class="p-5 card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">CityLite Security Backpack</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
+                    <div class="p-3 d-flex flex-row">
+                      <h2 class="fw-bold mt-2 price">$234</h2>
+                      <button type="button" class="btn btn-primary btn-property bag-btn"><i class="fas fa-shopping-cart p-2"></i>BUY NOW</button>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </section>
+        <section class="container mt-5">
+          <h2 >TRAVAL BACKPACK</h2>
+          <br>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+           <div class="col">
+              <div class="card h-100 card-image shadow rounded-3">
+                  <img src="Photos/img4.png" class="p-5 card-img-top" alt="...">
+                  <div class="card-body">
+                  <h5 class="card-title">Travel Sport  </h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="p-3 d-flex flex-row">
+                    <h2 class="fw-bold mt-2 price">$234</h2>
+                    <button type="button" class="btn btn-primary btn-property bag-btn"><i class="fas fa-shopping-cart p-2"></i>BUY NOW</button>
+                  </div>    
+              </div>
+              </div>
+              <div class="col">
+              <div class="card h-100 card-image shadow rounded-3">
+                  <img src="Photos/pngwing 2.png" class="p-5 card-img-top " alt="...">
+                  <div class="card-body">
+                  <h5 class="card-title">Jack Wolfskin West Highland </h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="p-3 d-flex flex-row">
+                    <h2 class="fw-bold mt-2 price">$234</h2>
+                    <button type="button" class="btn btn-primary btn-property bag-btn"><i class="fas fa-shopping-cart p-2"></i>BUY NOW</button>
+                  </div>            
+              </div>
+              </div>
+              <div class="col">
+              <div class="card h-100 card-image shadow rounded-3">
+                  <img src="Photos/pngwing 3.png" class="p-5 card-img-top" alt="...">
+                  <div class="card-body">
+                  <h5 class="card-title">Hiking Trekking Bag Camping</h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="p-3 d-flex flex-row">
+                    <h2 class="fw-bold mt-2 price">$234</h2>
+                    <button type="button" class="btn btn-primary btn-property bag-btn"><i class="fas fa-shopping-cart p-2"></i>BUY NOW</button>
+                  </div>
+              </div>
+            </div>
+          </div>
+      </section>
+      <section style="height:300px; border-radius: 10px; background-color: rgb(208, 208, 212);" class="container mt-5 d-flex justify-content-center align-items-center p-2">
+        <div>
+          <h1>LET'S STAY IN TOUCH</h1>
+          <h5>Get updates on sales, specials and more</h5>
+          <input style="border:0px;"type="text" placeholder="Enter your email address">
+          <button type="button" class="btn btn-primary btn-property ">SUBMIT</button>
+        </div>
+      </section>
     </main>
-    <footer>
-        
+    <footer class="text-center mt-5">
+      <small>©2021. Penguin Fashion. All rights reserved. Shihab, Bangladesh. </small>
     </footer>
+    <script src="css/bootstrap.min.js"></script>
 </body>
 </html>
